--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="EcoAI.html">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="https://krushnamengal.wordpress.com/">About</a></li>
                     <li><a href="https://github.com/krushna001m" target="_blank">Contact</a></li>
                 </ul>
             </nav>
